[gd_scene load_steps=3 format=2]

[ext_resource path="res://hurtbox.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.2203, 13.0493 )

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0952759, -2.07569 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="invincible_ended" from="." to="." method="_on_Hurtbox_invincible_ended"]
[connection signal="invincible_started" from="." to="." method="_on_Hurtbox_invincible_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
